# cudalis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: client.rs  main.rs  versions.rs
